# llm-bench-cli

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/llm_bench_cli/: __init__.py  adapters.py  cli.py  models.py
tests/: test_cli.py
