[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-bench-cli"
version = "0.1.0"
description = "Benchmark OpenAI-compatible inference endpoints from the terminal."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Mukunda Rao Katta" }
]
dependencies = [
  "click>=8.1.0",
  "httpx>=0.25.0",
  "rich>=13.0.0"
]

[project.scripts]
llm-bench = "llm_bench_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
